tests/type-errors/06-cons-not-list.flt
// Cons tail must be list
// --- Command: dotnet run --project FunLang -- --emit-type %input 2>&1
// --- ExitCode: 1
// --- Input:
1 :: 2
// --- Output:
TypeError: Cannot unify int with int list
